--- a/Demo/TextEffects/main.css
+++ b/Demo/TextEffects/main.css
@@ -20,10 +20,10 @@ body {
 
 .container {
 	z-index: 2;
-	position: relative;
-	display: inline-block;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
+	margin: 0;
+	padding: 0;
 }
 
 /*
@@ -51,14 +51,11 @@ body {
 	position: absolute;
 	top: 47.5%;
 	width: 100%;
-	height: 100%;
     font-family: 'Inconsolata', monospace;
     font-size: 1.5rem;
     letter-spacing: 4px;
     color: white;
 	text-align: center;
-	white-space: no-wrap;
-	overflow: hidden;
 }
 
 .text-continue {
@@ -76,4 +73,3 @@ body {
 	text-align: center;
 	align-content: center;
 }
-
