--- a/Demo/GP2/www/scss/header.scss
+++ b/Demo/GP2/www/scss/header.scss
@@ -12,10 +12,10 @@
 /**********************************************************
  * Sizes and dimensions
  */
-    $header-height: 20vh;
+    $header-height: 22.5vh;
 
     $title-logo-width: $header-height;
-    $title-nav-width: 30vh;
+    $title-nav-width: ($header-height * 2);
 
 
 /**********************************************************
@@ -60,8 +60,8 @@
             #header-image {
                 @extend %header-el;
                 position: absolute;
-                top: 25%; left: 25%;
-                width: 50%; height: 50%;
+                top: 20%; left: 20%;
+                width: 60%; height: 60%;
                 background: #CCC;
             }
 
@@ -80,10 +80,9 @@
                 @extend %header-el;
                 z-index: 51;
                 position: absolute;
-                top: 25%; right: 10%;
+                top: 20%; right: 10%;
                 width: 10%; height: 20%;
                 background: none;
-           //     margin-left: $title-logo-width;
             }
 
                 .header-nav-option {
@@ -95,13 +94,11 @@
                 }
 
                     .header-nav-option a {
-                        z-index: 53;
                         cursor: pointer;
                         width: auto;
                         margin: 0;
                         padding: 0px 0px 0px 2px;
                         text-align: left;
                         font-size: 1.75vh;
-                        line-height: 4vh;
-                        font-family: NationalBook;
+                        line-height: 3.5vh;
                     }
