--- a/Demo/GP2/www/scss/main.scss
+++ b/Demo/GP2/www/scss/main.scss
@@ -43,13 +43,12 @@
  * relative (non-fixed) elements.
  */
             #inner {
-                position: relative;
+                position: absolute;
                 float: left;
                 z-index: 2;
                 margin: 0px;
-                width: 100%; height: auto; 
+                width: 100%; height: 100%; 
                 min-height: 100%;
-                box-sizing: border-box;
                 background: $primary-bg;
             }
 
@@ -67,9 +66,7 @@
 /**********************************************************
  * Imports.
  */
-    @import "fonts.scss";
     @import "header.scss";
     @import "footer.scss";
     @import "content.scss";
-    @import "images.scss";
     @import "responsive.scss";
